--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio futuriste de développeur web passionné - Créateur d'expériences numériques innovantes" />
-    <meta name="keywords" content="développeur web, portfolio, React, Node.js, design futuriste" />
-    <title>Portfolio Futuriste - Développeur Web Passionné</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta
+      name="description"
+      content="Portfolio futuriste de développeur web passionné - Créateur d'expériences numériques innovantes"
+    />
+    <meta
+      name="keywords"
+      content="développeur web, portfolio, React, Node.js, design futuriste"
+    />
+    <title>Mouhamadou Mansour Sow – Codeur de solutions pour l’Afrique</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
     <div id="root"></div>
